@@ -39,11 +39,11 @@ Feature: Create sites
 
   Scenario: Basic site with layouts, pages, posts and files
     Given I have a _layouts directory
-    And I have a page layout that contains "Page Layout: {{ site.posts.size }}"
-    And I have a post layout that contains "Post Layout: {{ content }}"
-    And I have an "index.html" page with layout "page" that contains "site index page"
+    And I have a page layout that contains "Page {{ page.title }}: {{ content }}"
+    And I have a post layout that contains "Post {{ page.title }}: {{ content }}"
+    And I have an "index.html" page with layout "page" that contains "Site contains {{ site.pages.size }} pages and {{ site.posts.size }} posts"
     And I have a blog directory
-    And I have a "blog/index.html" page with layout "page" that contains "category index page"
+    And I have a "blog/index.html" page with layout "page" that contains "blog category index page"
     And I have an "about.html" file that contains "No replacement {{ site.posts.size }}"
     And I have an "another_file" file that contains ""
     And I have a _posts directory
@@ -58,14 +58,14 @@ Feature: Create sites
       | entry4    | 6/27/2009 | post    | content for entry4.                    |
     When I run jekyll
     Then the _site directory should exist
-    And I should see "Page Layout: 4" in "_site/index.html"
+    And I should see "Page : Site contains 2 pages and 4 posts" in "_site/index.html"
     And I should see "No replacement \{\{ site.posts.size \}\}" in "_site/about.html"
     And I should see "" in "_site/another_file"
-    And I should see "Page Layout: 4" in "_site/blog/index.html"
-    And I should see "Post Layout: <p>content for entry1.</p>" in "_site/2009/03/27/entry1.html"
-    And I should see "Post Layout: <p>content for entry2.</p>" in "_site/2009/04/27/entry2.html"
-    And I should see "Post Layout: <p>content for entry3.</p>" in "_site/category/2009/05/27/entry3.html"
-    And I should see "Post Layout: <p>content for entry4.</p>" in "_site/category/2009/06/27/entry4.html"
+    And I should see "Page : blog category index page" in "_site/blog/index.html"
+    And I should see "Post entry1: <p>content for entry1.</p>" in "_site/2009/03/27/entry1.html"
+    And I should see "Post entry2: <p>content for entry2.</p>" in "_site/2009/04/27/entry2.html"
+    And I should see "Post entry3: <p>content for entry3.</p>" in "_site/category/2009/05/27/entry3.html"
+    And I should see "Post entry4: <p>content for entry4.</p>" in "_site/category/2009/06/27/entry4.html"
 
   Scenario: Basic site with include tag
     Given I have a _includes directory
